src/objects/Document_Profile_History__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>Document Profile Histories</relationshipLabel>
        <relationshipName>Document_Profile_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Parent__c</fullName>
        <label>Sub Parent</label>
        <picklist>
            <picklistValues>
                <fullName>Document Profile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Profile History</label>
    <nameField>
        <displayFormat>DPH-{0000}</displayFormat>
        <label>Document Profile History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Profile Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>